MCR-2956 let the server generate the bucket id and many improvements